# extractor_preguntas_examenes

./: .gitignore  README.md  pyproject.toml
src/exam_question_downloader/: __init__.py  main.py
src/exam_question_downloader/scraping/: navigation.py  tools.py  xpaths.py
src/exam_question_downloader/utils/: consts.py  text_formating.py  text_processing.py
src/notebooks/: 20240519-Run.ipynb  ClassifyFromText.ipynb  ExtractQuestionsFromPDF.ipynb  FromPDFToText.ipynb  FromTextToCSV.ipynb  Run.ipynb  ShowFromCSV.ipynb  pdf2png.ipynb
